--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <section class="home" id="home">
 
     <div class="image">
-        <img src="images/main-img.jpg" alt="">
+        <img src="main-img.jpg" alt="">
     </div>
 
     <div class="content">
@@ -211,42 +211,42 @@
     <div class="image-container">
 
         <div class="box design">
-            <img src="images/img1.png" alt="">
+            <img src="img1.png" alt="">
             <div class="info">
                 <a href="https://siddharth260.github.io/The-SF-Bank/" target="_blank"><h3>Banking System</h3></a>
             </div>
         </div>
 
         <div class="box design">
-            <img src="images/img2.png" alt="">
+            <img src="img2.png" alt="">
             <div class="info">
                 <a href="https://siddharth260.github.io/Calculator/" target="_blank"><h3>Calculator</h3></a>
             </div>
         </div>
         
         <div class="box design">
-            <img src="images/img3.png" alt="">
+            <img src="img3.png" alt="">
             <div class="info">
                 <a href="https://siddharth260.github.io/TO-DO-LIST/" target="_blank"><h3>To Do List</h3></a>  
             </div>
         </div>
 
         <div class="box code">
-            <img src="images/img4.png" alt="">
+            <img src="img4.png" alt="">
             <div class="info">
                 <a href="https://siddharth260.github.io/Registration-Form/" target="_blank"><h3>Registretion Form</h3></a>
             </div>
         </div>
 
         <div class="box code">
-            <img src="images/img5.jpg" alt="">
+            <img src="img5.jpg" alt="">
             <div class="info">
                 <a href="https://siddharth260.github.io/E-Learning/" target="_blank"><h3>E-Learning Website</h3></a>
             </div>
         </div>
 
         <div class="box website">
-            <img src="images/img6.png" alt="">
+            <img src="img6.png" alt="">
             <div class="info">
                 <a href="https://siddharth260.github.io/Fetch-Data/" target="_blank"><h3>Fetch Data using API</h3></a>
             </div>
